feat: interface progress

--- a/src/content/sepulcher/01.index.md
+++ b/src/content/sepulcher/01.index.md
@@ -1,7 +1,9 @@
 ---
 title: 'Sepulcher of the First Ones'
 description: 'Final raid of the Shadowlands expansion.'
-navTitle: 'Sepulcher'
+navigation:
+  title: 'Sepulcher'
+  icon: '/images/raids/sepulcher/sepulcher-icon.png'
 ---
 
 Hello World heee
