--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -1,32 +1,54 @@
 ---
 title: 'The Jailer'
-description: ''
-spells: [
-  366377, # World Crusher
-  366401, # Blood of Azeroth
-  362028, # Relentless Domination
-  366408, # Surging Azerite
-  366703, # Azerite Radiation
-]
+description: 'The ultimate boss, mastermind behind all so far, nerfed to oblivion.'
+navigation:
+  title: 'Jailer'
+  description: 'Why are we fighting again?'
+  icon: '/images/raids/sepulcher/jailer-icon.png'
+head:
+  link:
+    - href: '/images/raids/sepulcher/jailer-icon.png'
+      rel: 'icon'
+      type: 'image/x-icon'
 ---
 
-## Mechanics
+## WeakAuras
 
-::mechanic{name="World Crusher"}
-In Mythic, the boss will attack Azeroth with :spell{name="World Crusher"} in Phase 1 at the start of the fight, spawning multiple pools of :spell{name="Blood of Azeroth"} and taking Azeroth down to 37% Health.
+- [Bomb Assignments](#) — Assigns players to the holes for bomb placements.
+- [Lorem Ipsum](#) — Some other WeakAura.
+
+## Phase 1 Mechanics
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=366377
+title: World Crusher
+---
+In Mythic, the boss will attack Azeroth with [World Crusher](https://www.wowhead.com/spell=366377) in Phase 1 at the start of the fight, spawning multiple pools of [Blood of Azeroth](https://www.wowhead.com/spell=366401) and taking Azeroth down to 37% Health.
 
 These pools need to be soaked in order to heal Azeroth, by standing in a line between the pools and Azeroth. The positioning of this will be explained in detail in the strategy section of the guide.
 
-When soaking a pool, the player who soaks will cause :spell{name="Surging Azerite"} to shoot out of them, latching onto the closest player within 13yd. This will then bounce to the next player and so on so forth. You use this mechanic to chain a line all the way to Azeroth so that the Blood heals her.
+When soaking a pool, the player who soaks will cause [Surging Azerite](https://www.wowhead.com/spell=366408) to shoot out of them, latching onto the closest player within 13yd. This will then bounce to the next player and so on so forth. You use this mechanic to chain a line all the way to Azeroth so that the Blood heals her.
 
-When soaking the Blood of Azeroth, players will receive a stack of :spell{name="Azerite Radiation"} for each tick of Surging Azerite that goes through them. The damage they take from Surging Azerite increases with each stack, as does their damage and healing done (3% per stack).
+When soaking the Blood of Azeroth, players will receive a stack of [Azerite Radiation](https://www.wowhead.com/spell=366703) for each tick of Surging Azerite that goes through them. The damage they take from Surging Azerite increases with each stack, as does their damage and healing done (3% per stack).
 
 You will need to make 2 teams for this in Phase 1:
 - **Melee Team**: Stands with the boss and chains Blood into Azeroth.
 - **Ranged Team**: Plays off to the left hand side and chains blood into Azeroth away from the boss (we use 5 players for this). 
 ::
 
-::mechanic{name="Relentless Domination"}
-
+::mechanic
+---
+link: https://www.wowhead.com/spell=362028
+title: Relentless Domination
+---
 Testy
 ::
+
+::callout{icon=🥲}
+You're quite the baka!
+::
+
+
+## Phase 2 Mechanics
+
