feat: add `chip` and Jailer data

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -14,16 +14,21 @@ head:
 
 ## WeakAuras
 
-- [Bomb Assignments](#) — Assigns players to the holes for bomb placements.
-- [Lorem Ipsum](#) — Some other WeakAura.
+- [`Rune of Damnation Assignments [Levels Version]`](https://wago.io/-Pk-iHqg0) — Class-based automatic bomb position assigner.
+- [`Jailer Bombs & Runes`](https://wago.io/Y_GSxwOkm) — A pack of two WeakAuras. The first is a countdown till you can jump into the holes with the bombs; it turns green when you can jump. The second tells you to stack on the boss when you're about to get mind-controlled.
+- [`SoF - Jailer - Compulsion`](https://wago.io/d2WbXHTob) — Nameplate aura that shows how much health is remaining on a mind-controlled player's shield.
+- [`Jailer - Cross`](https://wago.io/BqS_fZxO9) — Covers your screen in cardinal lines to line up with other players for blood soaks.
+- [`BGDD Jailer - P3 Torment Assignments (group)`](https://wago.io/vTJwnSq41) — Assigns players to a position during P3 torments for stacking adds.
+## Phase 1
 
-## Phase 1 Mechanics
-
+### Mechanics
 ::mechanic
 ---
 link: https://www.wowhead.com/spell=366377
 title: World Crusher
+subtitle: Chain Blood Links
 ---
+
 In Mythic, the boss will attack Azeroth with [World Crusher](https://www.wowhead.com/spell=366377) in Phase 1 at the start of the fight, spawning multiple pools of [Blood of Azeroth](https://www.wowhead.com/spell=366401) and taking Azeroth down to 37% Health.
 
 These pools need to be soaked in order to heal Azeroth, by standing in a line between the pools and Azeroth. The positioning of this will be explained in detail in the strategy section of the guide.
@@ -41,14 +46,52 @@ You will need to make 2 teams for this in Phase 1:
 ---
 link: https://www.wowhead.com/spell=362028
 title: Relentless Domination
+subtitle: Hide
 ---
-Testy
+Dominated pylons cast [Tyranny](https://www.wowhead.com/spell=366030/tyranny), marking several players with yellow lines and launching orbs in their direction as seen on Heroic.
+
+On Mythic getting hit by 3 of these lines will mind control the player through [Domination](https://www.wowhead.com/spell=362075/domination). A person always gets hit by their own line, so anyone with a line cannot get hit by 2 more.
 ::
 
-::callout{icon=🥲}
-You're quite the baka!
+::mechanic
+---
+link: https://www.wowhead.com/spell=363893/martyrdom
+title: Martyrdom
+subtitle: Tank Combo & Soak
+---
+The tank mechanic [Martyrdom](https://www.wowhead.com/spell=363893/martyrdom) is a sequence of attacks:
+
+1. [Imprisonment](https://www.wowhead.com/spell=363886)
+2. [Persecution](https://www.wowhead.com/spell=363952)
+3. [Suffering](https://www.wowhead.com/spell=362194)
+4. [Misery](https://www.wowhead.com/spell=362189)
+
+The raid is concerned with the soaking mechanic, [Misery](https://www.wowhead.com/spell=362189/misery). No fewer than 5 players can get hit or we wipe.
+
+On Mythic players hit are given a vulnerability, [Relentless Misery](https://www.wowhead.com/spell=362192/relentless-misery), preventing them from soaking the following misery.
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=362631/chains-of-oppression
+title: Chains of Oppression
+subtitle: Gateway
+---
+
+The boss will grip everyone and apply [Chains of Oppression](https://www.wowhead.com/spell=362631/chains-of-oppression). Players need to run away to decrease the falloff damage from [Oppression](https://www.wowhead.com/spell=362617/oppression).
+
 ::
 
 
-## Phase 2 Mechanics
+## Phase 2
+
+### Mechanics
+
+## Phase 3
+
+### Mechanics
+
+## Phase 4
+
+### Mechanics
 
