feat: add jailer mechanics

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -26,20 +26,55 @@ head:
 ---
 link: https://www.wowhead.com/spell=366377
 title: World Crusher
-subtitle: Chain Blood Links
+subtitle: Pool Soaks
 ---
 
-In Mythic, the boss will attack Azeroth with [World Crusher](https://www.wowhead.com/spell=366377) in Phase 1 at the start of the fight, spawning multiple pools of [Blood of Azeroth](https://www.wowhead.com/spell=366401) and taking Azeroth down to 37% Health.
+On Mythic the boss will attack Azeroth with [World Crusher](https://www.wowhead.com/spell=366377) in Phase 1 at the start of the fight, spawning multiple pools of [Blood of Azeroth](https://www.wowhead.com/spell=366401) and taking Azeroth down to 37% Health.
 
-These pools need to be soaked in order to heal Azeroth, by standing in a line between the pools and Azeroth. The positioning of this will be explained in detail in the strategy section of the guide.
+- **Bloods of Azerite** spawn in multiples and have 3 charges of [Surging Azerite](https://www.wowhead.com/spell=366408) that are consumed by running into them. The player who touches the blood will chain this effect to any player within 13yds.
+- The goal is to form a chain all the way to Azeroth as this will heal her for 5% per charge.
+- Players affected by **Surging Azerite** are also given [Azerite Radiation](https://www.wowhead.com/spell=366703), increasing damage and healing done by 7% per stack up to a maximum of 6 stacks but also making them more vulnerable to **Surging Azerite**.
+- Chaining into Azeroth requires a minimum of 5 people per blood. 
 
-When soaking a pool, the player who soaks will cause [Surging Azerite](https://www.wowhead.com/spell=366408) to shoot out of them, latching onto the closest player within 13yd. This will then bounce to the next player and so on so forth. You use this mechanic to chain a line all the way to Azeroth so that the Blood heals her.
+The strategy section covers the formation of two groups, a melee and ranged team, that will be chaining the bloods into Azeroth. The "big-dam" strategy is more about hitting 6 stacks and staying there, but requires more careful healing cooldown placement due to the buff's vulnerability component. It's incredibly easy post-nerf to heal Azeroth all the way up and essentially ignore her health for the rest of the fight.
 
-When soaking the Blood of Azeroth, players will receive a stack of [Azerite Radiation](https://www.wowhead.com/spell=366703) for each tick of Surging Azerite that goes through them. The damage they take from Surging Azerite increases with each stack, as does their damage and healing done (3% per stack).
+::content-figure
+  ::video-player
+  ---
+  sources:
+    - src: https://i.imgur.com/FdnjpfJ.mp4
+      type: video/mp4
+  ---
+  ::
+#caption
+The Shaman (far right) waits for the hunter in the video to arrive in position before soaking the blood.
+::
+::
 
-You will need to make 2 teams for this in Phase 1:
-- **Melee Team**: Stands with the boss and chains Blood into Azeroth.
-- **Ranged Team**: Plays off to the left hand side and chains blood into Azeroth away from the boss (we use 5 players for this). 
+::mechanic
+---
+link: https://www.wowhead.com/spell=360282/rune-of-damnation
+title: Rune of Damnation
+subtitle: Bomb Jumping
+---
+The boss switches between different rune mechanics each phase. In phase 1 the rune mechanic is a bomb applied to 6 players, 3 more than Heroic. A WeakAura will assign players in a triangle pattern indicated on their screen, e.g. `front`, `left`, `right`, ...etc. Another WeakAura will tell you when to jump in the hole.
+
+The orientation of this triangle is always facing Azeroth.
+
+  ::content-figure
+    ![Rune of Damnation](/images/raids/sepulcher/jailer/rune-of-damnation.png)
+
+  #caption
+  We start on the labeled triangle and move clockwise throughout the phase.
+  ::
+
+  ::video-player
+  ---
+  sources:
+  - src: https://i.imgur.com/X3dJ0x6.mp4
+    type: video/mp4
+  ---
+  ::
 ::
 
 ::mechanic
@@ -51,13 +86,18 @@ subtitle: Hide
 Dominated pylons cast [Tyranny](https://www.wowhead.com/spell=366030/tyranny), marking several players with yellow lines and launching orbs in their direction as seen on Heroic.
 
 On Mythic getting hit by 3 of these lines will mind control the player through [Domination](https://www.wowhead.com/spell=362075/domination). A person always gets hit by their own line, so anyone with a line cannot get hit by 2 more.
+
+::callout{type="warning" icon="⚠️"}
+Players with lines should only dodge other lines by running directly at, or directly away from their **own** line. Image shortening or lengthening the line as done on Dausegne. Mind-controls from this should be exceptionally rare and is a dumb death post-nerf.
+::
+
 ::
 
 ::mechanic
 ---
 link: https://www.wowhead.com/spell=363893/martyrdom
 title: Martyrdom
-subtitle: Tank Combo & Soak
+subtitle: Tank Soak
 ---
 The tank mechanic [Martyrdom](https://www.wowhead.com/spell=363893/martyrdom) is a sequence of attacks:
 
@@ -68,7 +108,7 @@ The tank mechanic [Martyrdom](https://www.wowhead.com/spell=363893/martyrdom) is
 
 The raid is concerned with the soaking mechanic, [Misery](https://www.wowhead.com/spell=362189/misery). No fewer than 5 players can get hit or we wipe.
 
-On Mythic players hit are given a vulnerability, [Relentless Misery](https://www.wowhead.com/spell=362192/relentless-misery), preventing them from soaking the following misery.
+On Mythic players hit are given a vulnerability, [Relentless Misery](https://www.wowhead.com/spell=362192/relentless-misery), preventing them from soaking the following misery. The strategy will include two alternating soaking groups.
 ::
 
 ::mechanic
@@ -78,20 +118,35 @@ title: Chains of Oppression
 subtitle: Gateway
 ---
 
-The boss will grip everyone and apply [Chains of Oppression](https://www.wowhead.com/spell=362631/chains-of-oppression). Players need to run away to decrease the falloff damage from [Oppression](https://www.wowhead.com/spell=362617/oppression).
-
+The boss will grip everyone and apply [Chains of Oppression](https://www.wowhead.com/spell=362631/chains-of-oppression). Players need to run away to decrease the falloff damage from [Oppression](https://www.wowhead.com/spell=362617/oppression). Gateways will be used throughout the strategy.
 ::
 
+::mechanic
+---
+link: https://www.wowhead.com/spell=362415/torment
+title: Torment
+subtitle: Spread Out
+---
+This is the spread-out mechanic from Heroic that evolves throughout the fight. Melee should leave the space under the boss clear.
+::
+
+### Strategy
 
 ## Phase 2
-
-### Mechanics
+::callout{type="info" icon="👷"}
+Not yet completed!
+::
 
 ## Phase 3
 
-### Mechanics
+::callout{type="info" icon="👷"}
+Not yet completed!
+::
 
 ## Phase 4
 
-### Mechanics
+::callout{type="info" icon="👷"}
+Not yet completed!
+::
+
 
