--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -14,11 +14,15 @@ head:
 
 ## WeakAuras
 
-- [`Rune of Damnation Assignments [Levels Version]`](https://wago.io/-Pk-iHqg0) — Class-based automatic bomb position assigner.
-- [`Jailer Bombs & Runes`](https://wago.io/Y_GSxwOkm) — A pack of two WeakAuras. The first is a countdown till you can jump into the holes with the bombs; it turns green when you can jump. The second tells you to stack on the boss when you're about to get mind-controlled.
-- [`SoF - Jailer - Compulsion`](https://wago.io/d2WbXHTob) — Nameplate aura that shows how much health is remaining on a mind-controlled player's shield.
-- [`Jailer - Cross`](https://wago.io/BqS_fZxO9) — Covers your screen in cardinal lines to line up with other players for blood soaks.
-- [`BGDD Jailer - P3 Torment Assignments (group)`](https://wago.io/vTJwnSq41) — Assigns players to a position during P3 torments for stacking adds.
+::callout{type="warning" icon="⚠️"}
+I have not looked at WeakAuras in earnest yet, do not take these as gospel. Prefer what Thaerhum has linked in `#strategies` for now.
+::
+
+- [Rune of Damnation Assignments [Levels Version]](https://wago.io/-Pk-iHqg0) — Class-based automatic bomb position assigner.
+- [Jailer Bombs & Runes](https://wago.io/Y_GSxwOkm) — A pack of two WeakAuras. The first is a countdown till you can jump into the holes with the bombs; it turns green when you can jump. The second tells you to stack on the boss when you're about to get mind-controlled.
+- [SoF - Jailer - Compulsion](https://wago.io/d2WbXHTob) — Nameplate aura that shows how much health is remaining on a mind-controlled player's shield.
+- [Jailer - Cross](https://wago.io/BqS_fZxO9) — Covers your screen in cardinal lines to line up with other players for blood soaks.
+- [BGDD Jailer - P3 Torment Assignments (group)](https://wago.io/vTJwnSq41) — Assigns players to a position during P3 torments for stacking adds.
 ## Phase 1
 
 ### Mechanics
@@ -130,7 +134,71 @@ subtitle: Spread Out
 This is the spread-out mechanic from Heroic that evolves throughout the fight. Melee should leave the space under the boss clear.
 ::
 
+### Assignments
+
+The tank soaks that we alternate will use 7 people for safety in each soak, one of which is the tank getting the mechanic. 5 of the 6 people not assigned to any group will be in charge of the ranged blood soak. It can be quite difficult for the ranged blood people to get back to the boss in time, so they aren't in the rotation.
+
+```
+#soak Tank1 Melee1 Melee2 Melee3 Melee4 Melee5 Melee6
+#soak Tank2 Ranged1 Ranged2 Ranged3 Ranged4 Ranged5 Ranged6
+```
+
+They are generally called the melee and ranged groups, but role doesn't impact the mechanic.
+
 ### Strategy
+
+We pull the boss to the triangle for the 6th bombs go, close to where he starts.
+
+1. `0:15` — Spread for [Torment](https://www.wowhead.com/spell=362415/torment).
+2. `0:18` — Gateway out of [Chains of Oppression](https://www.wowhead.com/spell=362631/chains-of-oppression). This puts us on triangle for the 1st set of bombs.
+
+![P1 First Sequence](/images/raids/sepulcher/jailer/jailer-p1-1.png)
+
+3. `0:25` — `Blood Soak 1`. Chain one blood puddle through the entire raid and into Azeroth. We will get 3 stacks. Ranged will be the ones that connect the blood to melee, and melee to Azeroth.
+4. `0:30` — `Tank Soak 1 (G1)`. First tank soak group.
+
+![P1 Second Sequence](/images/raids/sepulcher/jailer/jailer-p1-2.png)
+
+5. `0:35` — `Bombs 1`. This is immediately followed by [Relentless Domination](https://www.wowhead.com/spell=362028), requiring us to LoS behind the pillars. The tanks will move the boss to diamond immediately after.
+6. `0:50` — `Torment 2`. Spread.
+7. `0:58` — `Bombs 2` 
+
+![P1 Third Sequence](/images/raids/sepulcher/jailer/jailer-p1-3.png)
+
+8. `1:10` — `Blood Soak 2 + 3`. This is the first soak with the 5 dedicated ranged soaking group doing a far pool. The ranged that are not part that 5 will start and finish the melee's chain. At this point the previous [Azerite Radiation](https://www.wowhead.com/spell=366703) has fallen off, so we go from `0 -> 3` stack wise.
+9. `1:20` — `Tank Soak 2 (G2)`
+
+::callout{type="warning" icon="⚠️"}
+The bloods should be activated **2 seconds after the timer** calls to soak them. This gives us the time to refresh the DoT next time instead of it resetting.
+::
+
+![P1 Fourth Sequence](/images/raids/sepulcher/jailer/jailer-p1-4.png)
+
+10. `1:25` — `Bomb Set 3`
+11. `1:30` — `Torment 3`
+12. `1:45` — `Blood Soaks 4 + 5`. This is the hardest part of P1 and the component of the "big dam" strat. Instead of the debuff falling off again we will soak the bloods on the timer exactly and go up to 6 stacks. The vulnerability makes us take a lot of damage, demanding many healing cooldowns and personals.
+13. `1:48` — `Tank Soak 3 (G1)`
+
+![P1 Fifth Sequence](/images/raids/sepulcher/jailer/jailer-p1-5.png)
+
+14. `1:55` — Boss moves after tank soak.
+15. `2:00` — `Bombs 4`
+16. `2:05` — `Torment 4`
+17. `2:07` — `Chains of Oppression 2`. We gateway to the next "triangle" area.
+
+![P1 Sixth Sequence](/images/raids/sepulcher/jailer/jailer-p1-6.png)
+
+18. `2:07` — Boss is moved to `moon`.
+19. `2:18` — `Blood Soak 4`. This is chained through the entire raid.
+20. `2:20` — `Bombs 5`
+
+![P1 Seventh Sequence](/images/raids/sepulcher/jailer/jailer-p1-7.png)
+
+21. `2:34` — `Tank Soak 4 (G2)` then the boss is moved to `star`.
+22. `2:40` — `Bomb Set 6`
+23. `2:50` — `Torment 5`
+
+![P1 Eighth Sequence](/images/raids/sepulcher/jailer/jailer-p1-8.png)
 
 ## Phase 2
 ::callout{type="info" icon="👷"}
