feat: add marker icons

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -143,10 +143,11 @@ They are generally called the melee and ranged groups, but role doesn't impact t
 
 ### Strategy
 
-We pull the boss to the triangle for the 6th bombs go, close to where he starts.
+The fight starts with us pulling the boss off to the side from where he starts.
 
-1. `0:15` — Spread for [Torment](https://www.wowhead.com/spell=362415/torment).
-2. `0:18` — Gateway out of [Chains of Oppression](https://www.wowhead.com/spell=362631/chains-of-oppression). This puts us on triangle for the 1st set of bombs.
+1. `0:15` — [Torment #1](https://www.wowhead.com/spell=362415/torment) spread.
+2. `0:18` — [Chains #1](https://www.wowhead.com/spell=362631/chains-of-oppression). Gateway to :marker{icon="Circle"}
+
 
 ![P1 First Sequence](/images/raids/sepulcher/jailer/jailer-p1-1.png)
 
