chore: test adding

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -6,6 +6,7 @@ navigation:
   description: 'Why are we fighting again?'
   icon: '/images/raids/sepulcher/jailer-icon.png'
 head:
+  image: '/images/raids/sepulcher/jailer-icon.png'
   link:
     - href: '/images/raids/sepulcher/jailer-icon.png'
       rel: 'icon'
