feat: phase 2 jailer

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -164,9 +164,102 @@ The bloods should be activated **2 seconds after the timer** calls to soak them.
 ![P1 Eighth Sequence](/images/raids/sepulcher/jailer/jailer-p1-8.png)
 
 ## Phase 2
-::callout{type="info" icon="👷"}
-Not yet completed!
+
+### Mechanics
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=366776/world-cracker
+title: World Cracker
+subtitle: Soak Pools
+---
+
+The boss attacks Azeroth and spawns blood as he did with [World Crusher](https://www.wowhead.com/spell=366377) in phase 1.
+
+However, players who help soak these pools eject [Tainted Azerite](https://www.wowhead.com/spell=366782/tainted-azerite) in the the cardinal directions with North being where the player is facing. It does a moderate amount of splash damage if hit. This is fundamentally the same as the Painsmith chains mechanic.
+
+Players who are in the 2 soaking groups of 4 players will stagger themselves diagonally from the pool to Azeroth. They will then physically turn their character to line up the WeakAura lines so that they intersect with the person directly opposite you on the other soaking group.
+
+::content-figure
+  ![Beyblades](/images/raids/sepulcher/jailer/beyblades.png)
+#caption
+This shows where the beyblades will shoot with respect to the main raid cluster. They shoot in all 4 directions around the soaking ranged but are ommitted.
 ::
+
+::video-player
+---
+sources:
+- src: https://i.imgur.com/9y2icWb.mp4
+  type: video/mp4
+---
+::
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=360373/unholy-attunement
+title: Unholy Attunement
+subtitle: Break Pillars
+---
+
+[Unholy Attunement](https://www.wowhead.com/spell=360373/unholy-attunement) is the mechanic the Jailer uses to bring pillars out of the ground. Just as on Heroic, tanks will use [Shattering Blast](https://www.wowhead.com/spell=359868/shattering-blast) to destroy these pillars. 
+
+The Jailer will summon pillars in sets of 3 around the room. The moment a pillar is 3 long it will reach Azeroth and end the phase. The tanks can only clear two per set so eventually we will phase due to this mechanic, but if the tanks miss a pylon you are likely to phase 1 set early.
+
+If a pillar touches a blood the boss gains [Consumed Azerite](https://www.wowhead.com/spell=366777/consumed-azerite) as a large absorb shield. This forces us to soak the bloods.
+
+::content-figure
+![Pillar Order](/images/raids/sepulcher/jailer/pillars.png)
+#caption
+This is only an example of tanks alternating (the different colors), pillars.
+::
+
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=366285/rune-of-compulsion
+title: Rune of Compulsion
+subtitle: Break MCs
+---
+Phase 2's version of the rune mechanic mind-controls 3 players after a 4 second delay. One of the recommended WeakAuras will tell you to get under the boss. If [Torment](https://www.wowhead.com/spell=362415/torment) is happening at the same time these players should still stack under the boss, as they will become mind-controlled just before these go off.
+
+Stuns and priority targeting should be used to clear them quickly. Avoid long-winded slows and bleeds.
+
+::callout{type="info" icon="🧠"}
+Shamans can use Tremor Totem just before getting mind-controlled to dispel themselves of the effect.
+::
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=360562/decimator
+title: Decimator
+subtitle: Avoid
+---
+The boss will periodically cast Decimator, a large blue swirly seen on Heroic. The swl and the thin blue line directly in front of the boss connected to the swirly are lethal. This no longer knocks back.
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=362415/torment
+title: Torment
+subtitle: Spread
+---
+
+[Torment] evolves in phase 2 to leave behind a swirl that explodes 4 seconds after the initial torment hit goes off. This turns the mechanic into [Earthbreaker Missiles](https://www.wowhead.com/spell=361676/earthbreaker-missiles). Melee should leave a free space under the boss.
+::
+
+### Strategy
+
+![P2 First Sequence](/images/raids/sepulcher/jailer/jailer-p1-1.png)
+![P2 Second Sequence](/images/raids/sepulcher/jailer/jailer-p2-2.png)
+![P2 Third Sequence](/images/raids/sepulcher/jailer/jailer-p2-3.png)
+![P2 Fourth Sequence](/images/raids/sepulcher/jailer/jailer-p2-4.png)
+![P2 Fifth Sequence](/images/raids/sepulcher/jailer/jailer-p2-5.png)
+![P2 Sixth Sequence](/images/raids/sepulcher/jailer/jailer-p2-6.png)
+![P2 Seventh Sequence](/images/raids/sepulcher/jailer/jailer-p2-7.png)
+![P2 Eigth Sequence](/images/raids/sepulcher/jailer/jailer-p2-8.png)
 
 ## Phase 3
 
