--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -12,6 +12,16 @@ head:
       type: 'image/x-icon'
 ---
 
+## Recommended Video
+
+Stankie has graciously updated his Jailer video for the most recent nerfs. He describes both of the primary strategies.
+
+::video-player
+---
+src: "https://www.youtube.com/watch?v=_8Qq7MQw-6o"
+---
+::
+
 ## WeakAuras
 
 - [Rune of Damnation Assignments [Levels Version]](https://wago.io/-Pk-iHqg0) — Class-based automatic bomb position assigner.
@@ -19,6 +29,22 @@ head:
 - [SoF - Jailer - Compulsion](https://wago.io/d2WbXHTob) — Nameplate aura that shows how much health is remaining on a mind-controlled player's shield.
 - [Jailer - Cross](https://wago.io/BqS_fZxO9) — Covers your screen in cardinal lines to line up with other players for blood soaks.
 - [BGDD Jailer - P3 Torment Assignments (group)](https://wago.io/vTJwnSq41) — Assigns players to a position during P3 torments for stacking adds.
+
+## Resources
+
+- Logs using the `3 3 6 6` strategy and our healing composition.
+  1. **No Shame (3363) (9:45)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/FHW3AGc9DPqLn7wX#fight=19&type=summary), [Wipefest](https://www.wipefest.gg/report/FHW3AGc9DPqLn7wX/fight/19?fightSummaryTab=timeline)
+  2. **Arcane Energies (8:28)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/fJdRDL6Ft9MmKbyN#fight=2), [Wipefest](https://www.wipefest.gg/report/fJdRDL6Ft9MmKbyN/fight/2?fightSummaryTab=timeline)
+  3. **Smokin Pirates (8:18)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/fbX4VcPnDrA2wByZ#fight=9&type=summary), [Wipefest](https://www.wipefest.gg/report/fbX4VcPnDrA2wByZ/fight/9?fightSummaryTab=timeline)
+  4. **Reprogress Live (8:13)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/7BtZJxkP2FpYvcgq#fight=7), [Wipefest](https://www.wipefest.gg/report/7BtZJxkP2FpYvcgq/fight/7?fightSummaryTab=timeline)
+  5. **Divide (8:16)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/kvR39zBjNZgyDbrq#fight=5), [Wipefest](https://www.wipefest.gg/report/kvR39zBjNZgyDbrq/fight/5?fightSummaryTab=timeline)
+  6. **Retry (3363) (8:23)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/QyVLm7ZvbA9FjNHJ#fight=2), [Wipefest](https://www.wipefest.gg/report/QyVLm7ZvbA9FjNHJ/fight/2?fightSummaryTab=timeline)
+  7. **Ruhe im Voice (8:31)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/wzaC6LVtgNTbPMqp#fight=4), [Wipefest](https://www.wipefest.gg/report/wzaC6LVtgNTbPMqp/fight/4?fightSummaryTab=timeline)
+  8. **Filthy Casuals (8:41)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/db9X6TpFAHVRfgz2#fight=31) [Wipefest](https://www.wipefest.gg/report/db9X6TpFAHVRfgz2/fight/31?fightSummaryTab=timeline)
+  9. **Idiots (8:39)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/xCv9tGYa1rPWzkXF#fight=14), [Wipfest](https://www.wipefest.gg/report/xCv9tGYa1rPWzkXF/fight/14?fightSummaryTab=timeline)
+  10. **Symphony of Fire (8:35)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/2CgQB4zxc6NGjYnt#fight=21), [Wipefest](https://www.wipefest.gg/report/2CgQB4zxc6NGjYnt/fight/21?fightSummaryTab=timeline)
+  11. **Flare (8:49)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/MBWdmb9a1j7wvCQD#fight=27), [Wipefest](https://www.wipefest.gg/report/MBWdmb9a1j7wvCQD/fight/27?fightSummaryTab=timeline)
+
 ## Phase 1
 
 ### Mechanics
