--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -40,8 +40,8 @@ src: "https://www.youtube.com/watch?v=_8Qq7MQw-6o"
   5. **Divide (8:16)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/kvR39zBjNZgyDbrq#fight=5), [Wipefest](https://www.wipefest.gg/report/kvR39zBjNZgyDbrq/fight/5?fightSummaryTab=timeline)
   6. **Retry (3363) (8:23)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/QyVLm7ZvbA9FjNHJ#fight=2), [Wipefest](https://www.wipefest.gg/report/QyVLm7ZvbA9FjNHJ/fight/2?fightSummaryTab=timeline)
   7. **Ruhe im Voice (8:31)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/wzaC6LVtgNTbPMqp#fight=4), [Wipefest](https://www.wipefest.gg/report/wzaC6LVtgNTbPMqp/fight/4?fightSummaryTab=timeline)
-  8. **Filthy Casuals (8:41)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/db9X6TpFAHVRfgz2#fight=31) [Wipefest](https://www.wipefest.gg/report/db9X6TpFAHVRfgz2/fight/31?fightSummaryTab=timeline)
-  9. **Idiots (8:39)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/xCv9tGYa1rPWzkXF#fight=14), [Wipfest](https://www.wipefest.gg/report/xCv9tGYa1rPWzkXF/fight/14?fightSummaryTab=timeline)
+  8. **Filthy Casuals (8:41)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/db9X6TpFAHVRfgz2#fight=31), [Wipefest](https://www.wipefest.gg/report/db9X6TpFAHVRfgz2/fight/31?fightSummaryTab=timeline)
+  9. **Idiots (8:39)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/xCv9tGYa1rPWzkXF#fight=14), [Wipefest](https://www.wipefest.gg/report/xCv9tGYa1rPWzkXF/fight/14?fightSummaryTab=timeline)
   10. **Symphony of Fire (8:35)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/2CgQB4zxc6NGjYnt#fight=21), [Wipefest](https://www.wipefest.gg/report/2CgQB4zxc6NGjYnt/fight/21?fightSummaryTab=timeline)
   11. **Flare (8:49)** — [WarcraftLogs](https://www.warcraftlogs.com/reports/MBWdmb9a1j7wvCQD#fight=27), [Wipefest](https://www.wipefest.gg/report/MBWdmb9a1j7wvCQD/fight/27?fightSummaryTab=timeline)
 
