--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -21,13 +21,12 @@ Stankie has graciously updated his Jailer video for the most recent nerfs. He de
 src: "https://www.youtube.com/watch?v=_8Qq7MQw-6o"
 ---
 ::
-
 ## WeakAuras
 
-- [Rune of Damnation Assignments [Levels Version]](https://wago.io/-Pk-iHqg0) — Class-based automatic bomb position assigner.
+- [RBP — Rune of Damnation Assignments](https://wago.io/o7YY0AkXd/3) — Class-based automatic bomb position assigner.
+- [RBP — Beyblade Crosshair](https://wago.io/yXA2QNBA3/1) — Shows crosshairs for character alignment during phase 2 blood soaks.
 - [Jailer Bombs & Runes](https://wago.io/Y_GSxwOkm) — A pack of two WeakAuras. The first is a countdown till you can jump into the holes with the bombs; it turns green when you can jump. The second tells you to stack on the boss when you're about to get mind-controlled.
 - [SoF - Jailer - Compulsion](https://wago.io/d2WbXHTob) — Nameplate aura that shows how much health is remaining on a mind-controlled player's shield.
-- [Jailer - Cross](https://wago.io/BqS_fZxO9) — Covers your screen in cardinal lines to line up with other players for blood soaks.
 - [BGDD Jailer - P3 Torment Assignments (group)](https://wago.io/vTJwnSq41) — Assigns players to a position during P3 torments for stacking adds.
 
 ## Resources
