feat: refactor `Jailer` to use `TabGroup`

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -167,34 +167,49 @@ This is the spread-out mechanic from Heroic that evolves throughout the fight. M
 
 The tank soaks that we alternate will use 7 people for safety in each soak, one of which is the tank getting the mechanic. 5 of the 6 people not assigned to any group will be in charge of the ranged blood soak. It can be quite difficult for the ranged blood people to get back to the boss in time, so they aren't in the rotation.
 
-```
-#soak Tank1 Melee1 Melee2 Melee3 Melee4 Melee5 Melee6
-#soak Tank2 Ranged1 Ranged2 Ranged3 Ranged4 Ranged5 Ranged6
-```
-
-They are generally called the melee and ranged groups, but role doesn't impact the mechanic.
-
 ### Strategy
 
-![P1 First Sequence](/images/raids/sepulcher/jailer/jailer-p1-1.png)
+The first phase has the boss rotating around the platform for each bomb set and assigned positions for blood soaking and chaining.
 
+::raid-plan
+
+  ::tab
+  ![P1 First Sequence](/images/raids/sepulcher/jailer/jailer-p1-1.png)
+  ::
+
+::tab
 ![P1 Second Sequence](/images/raids/sepulcher/jailer/jailer-p1-2.png)
-
-![P1 Third Sequence](/images/raids/sepulcher/jailer/jailer-p1-3.png)
-
-::callout{type="warning" icon="⚠️"}
-The bloods should be activated **2 seconds after the timer** calls to soak them. This gives us the time to refresh the DoT next time instead of it resetting.
 ::
 
-![P1 Fourth Sequence](/images/raids/sepulcher/jailer/jailer-p1-4.png)
+::tab
+![P1 Third Sequence](/images/raids/sepulcher/jailer/jailer-p1-3.png)
+::
 
+::tab
+  ::callout{type="warning" icon="⚠️"}
+  The bloods should be activated **2 seconds after the timer** calls to soak them. This gives us the time to refresh the DoT next time instead of it resetting.
+  ::
+
+  ![P1 Fourth Sequence](/images/raids/sepulcher/jailer/jailer-p1-4.png)
+::
+
+::tab
 ![P1 Fifth Sequence](/images/raids/sepulcher/jailer/jailer-p1-5.png)
+::
 
+::tab
 ![P1 Sixth Sequence](/images/raids/sepulcher/jailer/jailer-p1-6.png)
+::
 
+::tab
 ![P1 Seventh Sequence](/images/raids/sepulcher/jailer/jailer-p1-7.png)
+::
 
+::tab
 ![P1 Eighth Sequence](/images/raids/sepulcher/jailer/jailer-p1-8.png)
+::
+::
+
 
 ## Phase 2
 
@@ -285,21 +300,40 @@ subtitle: Spread
 
 ### Strategy
 
+::raid-plan
+
+::tab
 ![P2 First Sequence](/images/raids/sepulcher/jailer/jailer-p2-1.png)
+::
 
+::tab
 ![P2 Second Sequence](/images/raids/sepulcher/jailer/jailer-p2-2.png)
+::
 
+::tab
 ![P2 Third Sequence](/images/raids/sepulcher/jailer/jailer-p2-3.png)
+::
 
+::tab
 ![P2 Fourth Sequence](/images/raids/sepulcher/jailer/jailer-p2-4.png)
+::
 
+::tab
 ![P2 Fifth Sequence](/images/raids/sepulcher/jailer/jailer-p2-5.png)
+::
 
+::tab
 ![P2 Sixth Sequence](/images/raids/sepulcher/jailer/jailer-p2-6.png)
+::
 
+::tab
 ![P2 Seventh Sequence](/images/raids/sepulcher/jailer/jailer-p2-7.png)
+::
 
+::tab
 ![P2 Eigth Sequence](/images/raids/sepulcher/jailer/jailer-p2-8.png)
+::
+::
 
 ## Phase 3
 
