feat: add phase 3 Jailer mechanics.

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -337,6 +337,93 @@ subtitle: Spread
 
 ## Phase 3
 
+### Mechanics
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=367051/world-shatterer
+title: World Shatterer
+subtitle: Soak Bloods
+---
+Just as with [World Cracker](https://www.wowhead.com/spell=366776/world-cracker) in phase 2 and [World Crusher](https://www.wowhead.com/spell=366377/world-crusher) in phase 1, the Jailer slaps Azeroth at the start of phase 3 and spawns bloods.
+
+Given the recent nerfs it is unnecessary to heal Azeroth any further. It is actually detrimental to do so, as [Expelled Corruption](https://www.wowhead.com/spell=370025/expelled-corruption) arrows shoot out of Azeroth whenever she is healed. They hurt a lot and silence but are effectively no longer a mechanic.
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=365033/desolation
+title: Desolation
+subtitle: Save Azeroth
+---
+As with Heroic the boss will face Azeroth and a column will eminate from him towards her. At least 17 people need to stand in this column to soak the effect to prevent Azeroth from taking too much damage and dying.
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=365151/rune-of-domination
+title: Rune of Domination
+subtitle: Heal Absorb
+---
+The rune mechanic of phase 3 is [Rune of Domination](https://www.wowhead.com/spell=365151/rune-of-domination). Three people are given a debuff that expires after 8 seconds, dealing 45k damage to those in its radius and applying [Dominating Will](https://www.wowhead.com/spell=365153/dominating-will) as an absorb shield split evenly with those who help soak with them.
+
+This mechanic should no longer be seen as we'll push to 15% and forcing the Jailer to enter phase 4 before this occurs. It happens about 10 seconds after the second [Defile](https://www.wowhead.com/spell=365174/defile).
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=365219/chains-of-anguish
+title: Chains of Anguish
+subtitle: Snap Chains
+---
+Seen on Heroic, [Chains of Anguish](https://www.wowhead.com/spell=365219/chains-of-anguish) go on the 3 players nearest the active tank, slowing these players and dealing damage.
+
+When they go out the active tank will instantly snap all of the chains. Personals and healing cooldowns are necessary to deal with the bursts of damage from [Chain Breaker](https://www.wowhead.com/spell=365224).
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=362415/torment
+title: Torment
+subtitle: Kill Adds
+---
+In the third phase [Torment](https://www.wowhead.com/spell=362415/torment) only goes on 10 non-tank players and spawns the Incarnation of Torment adds that continously try to cast [Cry of Loathing](https://www.wowhead.com/spell=365385/cry-of-loathing) so long as they live. Since they cannot be gripped on Mythic we will utilize the [BGDD Jailer - P3 Torment Assignments (group)](https://wago.io/vTJwnSq41) WeakAura to stack 2 debuffs on top of each other at a time in close proximity for easy add cleave.
+
+The torment occurs immediately following the first [Defile](https://www.wowhead.com/spell=365174/defile), meaning we will be stacked together coming out of a gateway. So facing Azeroth, each player will orient themselves on their assigned corner of the pentagram.
+
+::content-figure
+![Torment Assignments](https://i.imgur.com/p3YpXHT.png)
+#caption
+The pink dots are drawn over the screenshot as representations of where the assignments correspond to.
+::
+
+Then everyone will quickly nuke down the adds while keeping them stunned and interrupted.
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=360565/decimator
+title: Decimator
+subtitle: Dodge Debris
+---
+The "no-longer-knockback-knockback", [Decimator](https://www.wowhead.com/spell=360565/decimator) now also destroys the pylons above the platform in phase 3, raining down large circles of [Falling Debris](https://www.wowhead.com/spell=365810/falling-debris). They deal a large amount of **shadow** damage if caught in the fall.
+
+The raid will stack in a location discussed in the strategy and move as a group to bait and dodge these in unison.
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=365174/defile
+title: Defile
+subtitle: Bait & Run
+---
+[Defile](https://www.wowhead.com/spell=365174/defile) still targets only ranged as seen on Heroic. On Mythic, the defile pools slowly grow in size, requiring us to make dramatic movements away from them.
+
+The strategy intends for us to only see one defile, but getting a second one is possible with damage issues. The first one we will gateway away from and hopefully not get the next one.
+::
+
+### Strategy
+
 ::callout{type="info" icon="👷"}
 Not yet completed!
 ::
