feat: add remaining Jailer info

--- a/src/content/sepulcher/11.the-jailer.md
+++ b/src/content/sepulcher/11.the-jailer.md
@@ -391,11 +391,11 @@ In the third phase [Torment](https://www.wowhead.com/spell=362415/torment) only 
 
 The torment occurs immediately following the first [Defile](https://www.wowhead.com/spell=365174/defile), meaning we will be stacked together coming out of a gateway. So facing Azeroth, each player will orient themselves on their assigned corner of the pentagram.
 
-  ::content-figure
-  ![Torment Assignments](https://i.imgur.com/p3YpXHT.png)
-  #caption
-  The pink dots are drawn over the screenshot as representations of where the assignments correspond to.
-  ::
+::content-figure
+![Torment Assignments](https://i.imgur.com/p3YpXHT.png)
+#caption
+The pink dots are drawn over the screenshot as representations of where the assignments correspond to.
+::
 
 Then everyone will quickly nuke down the adds while keeping them stunned and interrupted.
 ::
@@ -424,14 +424,69 @@ The strategy intends for us to only see one defile, but getting a second one is 
 
 ### Strategy
 
-::callout{type="info" icon="👷"}
-Not yet completed!
+::raid-plan
+
+::tab
+![Jailer P3 1](/images/raids/sepulcher/jailer/jailer-p3-1.png)
+::
+::tab
+![Jailer P3 2](/images/raids/sepulcher/jailer/jailer-p3-2.png)
+::
+::tab
+![Jailer P3 3](/images/raids/sepulcher/jailer/jailer-p3-3.png)
+::
+::tab
+![Jailer P3 4](/images/raids/sepulcher/jailer/jailer-p3-4.png)
+::
+
 ::
 
 ## Phase 4
 
-::callout{type="info" icon="👷"}
-Not yet completed!
+### Mechanics
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=360282/rune-of-damnation
+title: Rune of Damnation
+subtitle: Bombs
+---
+This is the saame bomb mechanic as in phase 1. Jump in a random hole. We're not meant to stay in this phase for long at all.
 ::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=362415/torment
+title: Torment
+subtitle: Spread & Run
+---
+The phase 4 torment is the same as the phase 2 torment but also spawns a [Defile](https://www.wowhead.com/spell=365174/defile) afterwards.
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=360378/meteor-cleave
+title: Meteor Cleave
+subtitle: Soak
+---
+The active tank will be targeted by a conical soaking mechanic that needs to be soaked by everyone not getting rid of a bomb or is afflicted with [Death Sentence](https://www.wowhead.com/spell=363748/death-sentence). This will do a considerable knockback.
+::
+
+::mechanic
+---
+link: https://www.wowhead.com/spell=363748/death-sentence
+title: Death Sentence
+subtitle: Dispel & Catch
+---
+In phase 4 a player will be debuffed with [Death Sentence](https://www.wowhead.com/spell=363748/death-sentence). It does moderate damage that increases in intensity over time.
+
+The mechanic is dispellable, and players with things like [Diffuse Magic](https://www.wowhead.com/spell=122783/diffuse-magic) need to be careful. When the debuff expires or is dispelled 2 more of the debuffs will spawn soakable puddles nearby. Soaking the puddles gives *anyone* who stands in the soak the debuff, but failing to soak a puddle will put [Death Sentence](https://www.wowhead.com/spell=363748/death-sentence) on the entire raid. Furthermore, getting 2 stacks of this debuff is lethal.
+
+Our strategy of spending as little time as possible in phase 3 and 4 means we shouldn't have to deal with this mechanic in its entirety. If a player is at risk of dying with it we can dispel them and have the tanks, or any other random players, soak the mechanic, and the boss should die before we have to do so again. It's important not to double-up on soaking puddles, but not soaking a puddle could wipe the raid as it will kill anyone already with the debuff (since 2 stacks is lethal).
+::
+
+### Strategy
+
+![Jailer P4](/images/raids/sepulcher/jailer//jailer-p4-1.png)
 
 
